Add soft memory limit
Otherwise GC will be lazy and the memory consumption might go over the limit and collector will be killed

--- a/deployment/report-aggregator/templates/tc-collector.yaml
+++ b/deployment/report-aggregator/templates/tc-collector.yaml
@@ -44,6 +44,8 @@ spec:
                   value: "clickhouse:9000"
                 - name: DATABASE_URL
                   value: {{ .Values.postgres.db_url | quote }}
+                - name: GOMEMLIMIT
+                  value: "1000MiB"
               volumeMounts:
                 - mountPath: /etc/config
                   name: config
