--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -14,11 +14,13 @@
     "pinia": "^2.1.7",
     "primevue": "3.47.2",
     "rxjs": "8.0.0-alpha.12",
+    "sanitize-html": "^2.11.0",
     "vue": "3.4.15",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.4",
+    "@types/sanitize-html": "^2.11.0",
     "global-jsdom": "^24.0.0",
     "jsdom": "^24.0.0",
     "msw": "^2.1.5"
