Update primevue to 3.48

--- a/dashboard/new-dashboard/tsconfig.json
+++ b/dashboard/new-dashboard/tsconfig.json
@@ -7,6 +7,6 @@
     "src/**/*.vue",
     "./src/components/common/shims-vue.d.ts",
     "./src/components/common/toast-event-bus.d.ts",
-    "./src/components/common/components.d.ts",
-  ],
+    "./src/components/common/components.d.ts"
+  ]
 }
