--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,13 @@ linters-settings:
     # Settings passed to gocritic.
     # The settings key is the name of a supported gocritic checker.
     # The list of supported checkers can be find in https://go-critic.github.io/overview.
+    enable-all: true
+    disabled-checks:
+      - paramTypeCombine
+      - commentedOutCode
+      - unnamedResult
+      - hugeParam
+      - rangeValCopy
     settings:
       captLocal:
         # Whether to restrict checker to params only.
@@ -121,7 +128,6 @@ linters:
     - exportloopref # checks for pointers to enclosing loop variables
     - gocheckcompilerdirectives # validates go compiler directive comments (//go:)
     - gocritic # provides diagnostics that check for bugs, performance and style issues
-    - gocyclo # computes and checks the cyclomatic complexity of functions
     - gomodguard # allow and block lists linter for direct Go module dependencies. This is different from depguard where there are different block types for example version constraints and module recommendations
     - goprintffuncname # checks that printf-like functions are named with f at the end
     - loggercheck # checks key value pairs for common logger libraries (kitlog,klog,logr,zap)
