Update to ESLint
Flat config is pain and requires total rewrite of the config, I couldn't configure vue+ts parser so disabled till ESLint 10 completely disabled old support

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,7 +3,7 @@ auto-imports.d.ts
 vite.config.ts
 postcss.config.js
 tailwind.config.js
-.eslintrc.js
+.eslintrc.cjs
 cmd/frontend/resources/**
 /dashboard/new-dashboard/src/components/common/BranchIcon.vue
 /dashboard/new-dashboard/src/components/common/SpaceIcon.vue
