--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ http-client.env.json
 
 node_modules/
 cmd/frontend/resources/
+cmd/degradation-detector/kodata/
 values-resolved.yaml
 
 .eslintcache
