--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.4.5",
     "unplugin-vue-components": "^0.27.0",
     "vite": "5.3.1",
+    "vite-plugin-static-copy": "^1.0.5",
     "vue": "^3.4.28",
     "vue-tsc": "^2.0.21"
   },
