--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -292,6 +292,11 @@
         "intellij_sources/navigation_from_KonanLauncher_to_val_configuration",
         "intellij_sources/navigation_from_MPPProjectTaskRunner_to_method_isNative"
       ]
+    },
+    "deleteAllImports": {
+      "arrow": [
+        "arrow/user_scenario/remove_all_imports/Either.kt"
+      ]
     }
   },
   "mac": {
