AT-977 Update ClickHouse to 24.3 LTS
Fix unpacking since there is one more clickhouse file from bash completion

--- a/deployment/clickhouse/Dockerfile
+++ b/deployment/clickhouse/Dockerfile
@@ -1,11 +1,11 @@
 FROM buildpack-deps:curl AS builder
 
-RUN cd /tmp && curl -L https://github.com/ClickHouse/ClickHouse/releases/download/v24.3.5.46-lts/clickhouse-common-static-24.3.5.46-amd64.tgz | tar xvz --strip-components=3
+RUN cd /tmp && curl -L https://github.com/ClickHouse/ClickHouse/releases/download/v24.3.5.46-lts/clickhouse-common-static-24.3.5.46-amd64.tgz | tar xvz --strip-components=1
 RUN mkdir /var/lib/clickhouse
 
 FROM gcr.io/distroless/base-debian11:nonroot
 
-COPY --from=builder /tmp/clickhouse /usr/bin/clickhouse
+COPY --from=builder /tmp/usr/bin/clickhouse /usr/bin/clickhouse
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
