[kotlin]Added new projects and metriccs for kotlin user scenarios

--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -317,6 +317,11 @@
       "intelliJSources": [
         "intellij_sources/usage_of_setUp_highlight_IdeResourcesUtil.kt"
       ]
+    },
+    "findUsagesAndGotoImplementation": {
+      "intelliJSources": [
+        "intellij_sources/usage_of_setUp_goto_implementation_ReadActionCache.kt"
+      ]
     }
   },
   "mac": {
