Introduce dark mode

--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -5,6 +5,7 @@
     "@fontsource/inter": "5.1.0",
     "@fontsource/jetbrains-mono": "5.1.0",
     "@primevue/themes": "^4.0.7",
+    "echarts": "5.5.1",
     "new-dashboard": "workspace:*",
     "pinia": "^2.2.2",
     "primevue": "4.0.7",
