Adding Move Declarations with Kotlin QA test project

--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -189,7 +189,8 @@
         "intellij_commit/moveFile_OptimizedImportsBuilder.kt_to_caches",
         "intellij_commit/moveFile_ORMReferencesUtil.java_to_util",
         "intellij_commit/moveFile_UAnnotationUtils.kt_to_analysis"
-      ]
+      ],
+      "qa-materials" : ["refactor-move/moveDeclarations_from_Referred.kt_to_Target.kt"]
     },
     "refactoringRename": {
       "intelliJ": [
