(fix) Prettier errors

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -19,12 +19,7 @@
     "moduleResolution": "node",
     "newLine": "LF",
     "sourceMap": true,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
-    "types": [
-      "vite/client"
-    ]
+    "lib": ["esnext", "dom"],
+    "types": ["vite/client"]
   }
 }
