--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Test build
         run: pnpm build
       - name: Run ESLint
-        run: ESLINT_USE_FLAT_CONFIG=false pnpm eslint . --ext .js,.vue,.ts
+        run: pnpm eslint .
       - name: Run VueTSC
         run: pnpm vue-tsc
       - name: Run Prettier
