--- a/deployment/report-aggregator/templates/degradation-detector.yaml
+++ b/deployment/report-aggregator/templates/degradation-detector.yaml
@@ -22,6 +22,7 @@ spec:
           containers:
             - name: degradation-detector
               image: {{ .Values.images.degradationDetector }}
+              imagePullPolicy: Always
               resources:
                 requests:
                   cpu: "1"
