--- a/package.json
+++ b/package.json
@@ -15,28 +15,24 @@
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.2.5",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/eslint-config-typescript": "^14.3.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
-    "lightningcss": "^1.29.1",
-    "postcss": "^8.5.1",
     "rollup": "^4.32.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "unplugin-vue-components": "^28.0.0",
     "vite": "6.0.11",
     "vite-plugin-static-copy": "^2.2.0",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.0"
   },
   "pnpm": {
     "peerDependencyRules": {
