--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.2.5",
+    "@tailwindcss/vite": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -25,14 +26,13 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
     "rollup": "^4.32.1",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.1",
     "typescript": "^5.7.3",
     "unplugin-vue-components": "^28.0.0",
     "vite": "6.0.11",
     "vite-plugin-static-copy": "^2.2.0",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.0"
+    "vue-tsc": "^2.2.0"
   },
   "pnpm": {
     "peerDependencyRules": {
