Fix notifications for multiline commit messages by removing the commit message altogether

--- a/.github/send-notification-action/action.yml
+++ b/.github/send-notification-action/action.yml
@@ -11,7 +11,7 @@ inputs:
   text:
     description: 'Notification text'
     required: true
-    default: ':x: The *ij-perf-report-aggregator/${{ github.workflow }}* `${{ github.job }}` job failed on <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.event.head_commit.message }}>'
+    default: ':x: The *ij-perf-report-aggregator/${{ github.workflow }}* `${{ github.job }}` job failed on <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} }}>'
 
 
 runs:
