Update to PrimeVue 4.3

--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -4,11 +4,11 @@
   "dependencies": {
     "@fontsource/inter": "5.1.1",
     "@fontsource/jetbrains-mono": "5.1.2",
-    "@primevue/themes": "^4.2.5",
+    "@primeuix/themes": "^1.0.0",
     "echarts": "5.6.0",
     "new-dashboard": "workspace:*",
     "pinia": "^3.0.1",
-    "primevue": "4.2.5",
+    "primevue": "4.3.0",
     "rxjs": "8.0.0-alpha.14",
     "vue": "3.5.13",
     "vue-router": "4.5.0"
