(chore) move main dependencies to dev

--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
     "vite": "6.2.0",
     "vite-plugin-static-copy": "^2.2.0",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.4"
+    "vue-tsc": "^2.2.4",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-unicorn": "^57.0.0",
+    "isoworker": "^0.2.4",
+    "prettier": "^3.5.2",
+    "vitest": "^3.0.7"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -47,12 +52,5 @@
   "packageManager": "pnpm@9.14.4",
   "engines": {
     "pnpm": ">=9"
-  },
-  "dependencies": {
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-unicorn": "^57.0.0",
-    "isoworker": "^0.2.4",
-    "prettier": "^3.5.2",
-    "vitest": "^3.0.7"
   }
 }
