--- a/package.json
+++ b/package.json
@@ -14,30 +14,26 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@primevue/auto-import-resolver": "^4.3.1",
-    "@tailwindcss/vite": "^4.0.7",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
+    "vite": "6.2.0",
+    "vite-plugin-static-copy": "^2.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/compiler-sfc": "^3.5.13",
-    "@vue/eslint-config-typescript": "^14.4.0",
+    "@primevue/auto-import-resolver": "^4.3.1",
+    "tailwindcss": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.7",
+    "rollup": "^4.34.8",
+    "unplugin-vue-components": "^28.4.0",
+    "vue": "^3.5.13",
+    "isoworker": "^0.2.4",
+    "vitest": "^3.0.7",
+    "typescript": "^5.7.3",
+    "vue-tsc": "^2.2.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
-    "rollup": "^4.34.8",
-    "tailwindcss": "^4.0.7",
-    "typescript": "^5.7.3",
-    "unplugin-vue-components": "^28.4.0",
-    "vite": "6.2.0",
-    "vite-plugin-static-copy": "^2.2.0",
-    "vue": "^3.5.13",
-    "vue-tsc": "^2.2.4",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-unicorn": "^57.0.0",
-    "isoworker": "^0.2.4",
-    "prettier": "^3.5.2",
-    "vitest": "^3.0.7"
+    "prettier": "^3.5.2"
   },
   "pnpm": {
     "peerDependencyRules": {
