--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-unicorn": "^57.0.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "prettier": "^3.5.2"
   },
   "pnpm": {
