--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@primevue/auto-import-resolver": "^4.3.1",
-    "@tailwindcss/vite": "^4.0.12",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@primevue/auto-import-resolver": "^4.3.2",
+    "@tailwindcss/vite": "^4.0.15",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-typescript": "^14.5.0",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-unicorn": "^57.0.0",
+    "eslint-plugin-prettier": "^5.2.4",
+    "eslint-plugin-unicorn": "^58.0.0",
     "eslint-plugin-vue": "^9.32.0",
     "isoworker": "^0.2.4",
     "prettier": "^3.5.3",
-    "rollup": "^4.35.0",
-    "tailwindcss": "^4.0.12",
+    "rollup": "^4.37.0",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "6.2.1",
+    "vite": "6.2.2",
     "vite-plugin-static-copy": "^2.3.0",
-    "vitest": "^3.0.8",
+    "vitest": "^3.0.9",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "3.0.0-alpha.2"
   },
   "pnpm": {
     "peerDependencyRules": {
